--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love❤️</title>
+    <link rel="shortcut icon" href="https://i.scdn.co/image/ab67616d0000b273f2c8da6cadd52a79cec69ff3" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <title>testing App</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="content">
+            <h1>L❤️ve Test Application</h1>
+            <input type="text" name="" placeholder="Your Name" id="">
+            <input type="text" name="" placeholder="Your Dear's Name" id=""><br>
+            <button>Calcutate</button>
+            <div class="section">
+                <h4>Shi is love with you</h4>
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
