added btn click

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="container">
         <div class="content">
             <h1>L❤️ve Test Application</h1>
-            <input type="text" name="" placeholder="Your Name" id="">
-            <input type="text" name="" placeholder="Your Dear's Name" id=""><br>
-            <button>Calcutate</button>
+            <input type="text" placeholder="Your Name" id="first">
+            <input type="text" placeholder="Your Dear's Name" id="second"><br>
+            <button id="btn">Calcutate</button>
             <div class="section">
-                <h4>Shi is love with you</h4>
+                <h4 id="print">relationship result</h4>
             </div>
         </div>
-        
+
     </div>
     <script src="./js/index.js"></script>
 </body>
