try catch error

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h1>L❤️ve Test Application</h1>
             <input type="text" placeholder="Your Name" id="first">
             <input type="text" placeholder="Your Dear's Name" id="second"><br>
+            <small id="msg"></small><br>
             <button id="btn">Calcutate</button>
             <div class="section">
                 <h4 id="print">relationship result</h4>
