--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://i.scdn.co/image/ab67616d0000b273f2c8da6cadd52a79cec69ff3" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://i.scdn.co/image/ab67616d0000b273f2c8da6cadd52a79cec69ff3" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
     <title>testing App</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="content">
-            <h1>L❤️ve Test Application</h1>
-            <input type="text" placeholder="Your Name" id="first">
-            <input type="text" placeholder="Your Dear's Name" id="second"><br>
-            <small id="msg"></small><br>
-            <button id="btn">Calcutate</button>
-            <div class="section">
-                <h2 id="print">relationship result</h2>
-            </div>
+      <div class="content">
+        <h1>L❤️ve Test Application</h1>
+        <input type="text" placeholder="Your Name" id="first" autofocus />
+        <input type="text" placeholder="Your Dear's Name" id="second" /><br />
+        <small id="msg"></small><br />
+        <button id="btn">Calcutate</button>
+        <div>
+          <h2 id="print">relationship result</h2>
+          <p id="statement"></p>
         </div>
-
+      </div>
     </div>
     <script src="./js/index.js"></script>
-</body>
+  </body>
 </html>
